src/business/controller/Qiskit_QCSR_Conversor/languages_grammar/qasm3Parser.py
# Generated from ..\parserGrammar\qasm3Parser.g4 by ANTLR 4.13.0
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class qasm3Parser ( Parser ):

    grammarFileName = "qasm3Parser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'OPENQASM'", "'include'", "'defcalgrammar'", 
                     "'def'", "'cal'", "'defcal'", "'gate'", "'extern'", 
                     "'box'", "'let'", "'break'", "'continue'", "'if'", 
                     "'else'", "'end'", "'return'", "'for'", "'while'", 
                     "'in'", "<INVALID>", "<INVALID>", "'input'", "'output'", 
                     "'const'", "'readonly'", "'mutable'", "'qreg'", "'qubit'", 
                     "'creg'", "'bool'", "'bit'", "'int'", "'uint'", "'float'", 
                     "'angle'", "'complex'", "'array'", "'void'", "'duration'", 
                     "'stretch'", "'gphase'", "'inv'", "'pow'", "'ctrl'", 
                     "'negctrl'", "'#dim'", "'durationof'", "'delay'", "'reset'", 
                     "'measure'", "'barrier'", "<INVALID>", "'['", "']'", 
                     "'{'", "'}'", "'('", "')'", "':'", "';'", "'.'", "','", 
                     "'='", "'->'", "'+'", "'++'", "'-'", "'*'", "'**'", 
                     "'/'", "'%'", "'|'", "'||'", "'&'", "'&&'", "'^'", 
                     "'@'", "'~'", "'!'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'im'" ]

    symbolicNames = [ "<INVALID>", "OPENQASM", "INCLUDE", "DEFCALGRAMMAR", 
                      "DEF", "CAL", "DEFCAL", "GATE", "EXTERN", "BOX", "LET", 
                      "BREAK", "CONTINUE", "IF", "ELSE", "END", "RETURN", 
                      "FOR", "WHILE", "IN", "PRAGMA", "AnnotationKeyword", 
                      "INPUT", "OUTPUT", "CONST", "READONLY", "MUTABLE", 
                      "QREG", "QUBIT", "CREG", "BOOL", "BIT", "INT", "UINT", 
                      "FLOAT", "ANGLE", "COMPLEX", "ARRAY", "VOID", "DURATION", 
                      "STRETCH", "GPHASE", "INV", "POW", "CTRL", "NEGCTRL", 
                      "DIM", "DURATIONOF", "DELAY", "RESET", "MEASURE", 
                      "BARRIER", "BooleanLiteral", "LBRACKET", "RBRACKET", 
                      "LBRACE", "RBRACE", "LPAREN", "RPAREN", "COLON", "SEMICOLON", 
                      "DOT", "COMMA", "EQUALS", "ARROW", "PLUS", "DOUBLE_PLUS", 
                      "MINUS", "ASTERISK", "DOUBLE_ASTERISK", "SLASH", "PERCENT", 
                      "PIPE", "DOUBLE_PIPE", "AMPERSAND", "DOUBLE_AMPERSAND", 
                      "CARET", "AT", "TILDE", "EXCLAMATION_POINT", "EqualityOperator", 
                      "CompoundAssignmentOperator", "ComparisonOperator", 
                      "BitshiftOperator", "IMAG", "ImaginaryLiteral", "BinaryIntegerLiteral", 
                      "OctalIntegerLiteral", "DecimalIntegerLiteral", "HexIntegerLiteral", 
                      "Identifier", "HardwareQubit", "FloatLiteral", "TimingLiteral", 
                      "BitstringLiteral", "Whitespace", "Newline", "LineComment", 
                      "BlockComment", "VERSION_IDENTIFER_WHITESPACE", "VersionSpecifier", 
                      "ARBITRARY_STRING_WHITESPACE", "StringLiteral", "EAT_INITIAL_SPACE", 
                      "EAT_LINE_END", "RemainingLineContent", "CAL_PRELUDE_WHITESPACE", 
                      "CAL_PRELUDE_COMMENT", "DEFCAL_PRELUDE_WHITESPACE", 
                      "DEFCAL_PRELUDE_COMMENT", "CalibrationBlock" ]

    RULE_program = 0
    RULE_version = 1
    RULE_statement = 2
    RULE_annotation = 3
    RULE_scope = 4
    RULE_pragma = 5
    RULE_statementOrScope = 6
    RULE_calibrationGrammarStatement = 7
    RULE_includeStatement = 8
    RULE_breakStatement = 9
    RULE_continueStatement = 10
    RULE_endStatement = 11
    RULE_forStatement = 12
    RULE_ifStatement = 13
    RULE_returnStatement = 14
    RULE_whileStatement = 15
    RULE_barrierStatement = 16
    RULE_boxStatement = 17
    RULE_delayStatement = 18
    RULE_gateCallStatement = 19
    RULE_measureArrowAssignmentStatement = 20
    RULE_resetStatement = 21
    RULE_aliasDeclarationStatement = 22
    RULE_classicalDeclarationStatement = 23
    RULE_constDeclarationStatement = 24
    RULE_ioDeclarationStatement = 25
    RULE_oldStyleDeclarationStatement = 26
    RULE_quantumDeclarationStatement = 27
    RULE_defStatement = 28
    RULE_externStatement = 29
    RULE_gateStatement = 30
    RULE_assignmentStatement = 31
    RULE_expressionStatement = 32
    RULE_calStatement = 33
    RULE_defcalStatement = 34
    RULE_expression = 35
    RULE_aliasExpression = 36
    RULE_declarationExpression = 37
    RULE_measureExpression = 38
    RULE_rangeExpression = 39
    RULE_setExpression = 40
    RULE_arrayLiteral = 41
    RULE_indexOperator = 42
    RULE_indexedIdentifier = 43
    RULE_returnSignature = 44
    RULE_gateModifier = 45
    RULE_scalarType = 46
    RULE_qubitType = 47
    RULE_arrayType = 48
    RULE_arrayReferenceType = 49
    RULE_designator = 50
    RULE_defcalTarget = 51
    RULE_defcalArgumentDefinition = 52
    RULE_defcalOperand = 53
    RULE_gateOperand = 54
    RULE_externArgument = 55
    RULE_argumentDefinition = 56
    RULE_argumentDefinitionList = 57
    RULE_defcalArgumentDefinitionList = 58
    RULE_defcalOperandList = 59
    RULE_expressionList = 60
    RULE_identifierList = 61
    RULE_gateOperandList = 62
    RULE_externArgumentList = 63

    ruleNames =  [ "program", "version", "statement", "annotation", "scope", 
                   "pragma", "statementOrScope", "calibrationGrammarStatement", 
                   "includeStatement", "breakStatement", "continueStatement", 
                   "endStatement", "forStatement", "ifStatement", "returnStatement", 
                   "whileStatement", "barrierStatement", "boxStatement", 
                   "delayStatement", "gateCallStatement", "measureArrowAssignmentStatement", 
                   "resetStatement", "aliasDeclarationStatement", "classicalDeclarationStatement", 
                   "constDeclarationStatement", "ioDeclarationStatement", 
                   "oldStyleDeclarationStatement", "quantumDeclarationStatement", 
                   "defStatement", "externStatement", "gateStatement", "assignmentStatement", 
                   "expressionStatement", "calStatement", "defcalStatement", 
                   "expression", "aliasExpression", "declarationExpression", 
                   "measureExpression", "rangeExpression", "setExpression", 
                   "arrayLiteral", "indexOperator", "indexedIdentifier", 
                   "returnSignature", "gateModifier", "scalarType", "qubitType", 
                   "arrayType", "arrayReferenceType", "designator", "defcalTarget", 
                   "defcalArgumentDefinition", "defcalOperand", "gateOperand", 
                   "externArgument", "argumentDefinition", "argumentDefinitionList", 
                   "defcalArgumentDefinitionList", "defcalOperandList", 
                   "expressionList", "identifierList", "gateOperandList", 
                   "externArgumentList" ]

    EOF = Token.EOF
    OPENQASM=1
    INCLUDE=2
    DEFCALGRAMMAR=3
    DEF=4
    CAL=5
    DEFCAL=6
    GATE=7
    EXTERN=8
    BOX=9
    LET=10
    BREAK=11
    CONTINUE=12
    IF=13
    ELSE=14
    END=15
    RETURN=16
    FOR=17
    WHILE=18
    IN=19
    PRAGMA=20
    AnnotationKeyword=21
    INPUT=22
    OUTPUT=23
    CONST=24
    READONLY=25
    MUTABLE=26
    QREG=27
    QUBIT=28
    CREG=29
    BOOL=30
    BIT=31
    INT=32
    UINT=33
    FLOAT=34
    ANGLE=35
    COMPLEX=36
    ARRAY=37
    VOID=38
    DURATION=39
    STRETCH=40
    GPHASE=41
    INV=42
    POW=43
    CTRL=44
    NEGCTRL=45
    DIM=46
    DURATIONOF=47
    DELAY=48
    RESET=49
    MEASURE=50
    BARRIER=51
    BooleanLiteral=52
    LBRACKET=53
    RBRACKET=54
    LBRACE=55
    RBRACE=56
    LPAREN=57
    RPAREN=58
    COLON=59
    SEMICOLON=60
    DOT=61
    COMMA=62
    EQUALS=63
    ARROW=64
    PLUS=65
    DOUBLE_PLUS=66
    MINUS=67
    ASTERISK=68
    DOUBLE_ASTERISK=69
    SLASH=70
    PERCENT=71
    PIPE=72
    DOUBLE_PIPE=73
    AMPERSAND=74
    DOUBLE_AMPERSAND=75
    CARET=76
    AT=77
    TILDE=78
    EXCLAMATION_POINT=79
    EqualityOperator=80
    CompoundAssignmentOperator=81
    ComparisonOperator=82
    BitshiftOperator=83
    IMAG=84
    ImaginaryLiteral=85
    BinaryIntegerLiteral=86
    OctalIntegerLiteral=87
    DecimalIntegerLiteral=88
    HexIntegerLiteral=89
    Identifier=90
    HardwareQubit=91
    FloatLiteral=92
    TimingLiteral=93
    BitstringLiteral=94
    Whitespace=95
    Newline=96
    LineComment=97
    BlockComment=98
    VERSION_IDENTIFER_WHITESPACE=99
    VersionSpecifier=100
    ARBITRARY_STRING_WHITESPACE=101
    StringLiteral=102
    EAT_INITIAL_SPACE=103
    EAT_LINE_END=104
    RemainingLineContent=105
    CAL_PRELUDE_WHITESPACE=106
    CAL_PRELUDE_COMMENT=107
    DEFCAL_PRELUDE_WHITESPACE=108
    DEFCAL_PRELUDE_COMMENT=109
    CalibrationBlock=110

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.0")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(qasm3Parser.EOF, 0)

        def version(self):
            return self.getTypedRuleContext(qasm3Parser.VersionContext,0)


        def statementOrScope(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(qasm3Parser.StatementOrScopeContext)
            else:
                return self.getTypedRuleContext(qasm3Parser.StatementOrScopeContext,i)


        def getRuleIndex(self):
            return qasm3Parser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = qasm3Parser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 129
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==1:
                self.state = 128
                self.version()


            self.state = 134
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 189080540626272252) != 0) or ((((_la - 67)) & ~0x3f) == 0 and ((1 << (_la - 67)) & 268179457) != 0):
                self.state = 131
                self.statementOrScope()
                self.state = 136
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 137
            self.match(qasm3Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VersionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def OPENQASM(self):
            return self.getToken(qasm3Parser.OPENQASM, 0)

        def VersionSpecifier(self):
            return self.getToken(qasm3Parser.VersionSpecifier, 0)

        def SEMICOLON(self):
            return self.getToken(qasm3Parser.SEMICOLON, 0)

        def getRuleIndex(self):
            return qasm3Parser.RULE_version

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVersion" ):
                listener.enterVersion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVersion" ):
                listener.exitVersion(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVersion" ):
                return visitor.visitVersion(self)
            else:
                return visitor.visitChildren(self)




    def version(self):

        localctx = qasm3Parser.VersionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_version)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 139
            self.match(qasm3Parser.OPENQASM)
            self.state = 140
            self.match(qasm3Parser.VersionSpecifier)
            self.state = 141
            self.match(qasm3Parser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def pragma(self):
            return self.getTypedRuleContext(qasm3Parser.PragmaContext,0)


        def aliasDeclarationStatement(self):
            return self.getTypedRuleContext(qasm3Parser.AliasDeclarationStatementContext,0)


        def assignmentStatement(self):
            return self.getTypedRuleContext(qasm3Parser.AssignmentStatementContext,0)


        def barrierStatement(self):
            return self.getTypedRuleContext(qasm3Parser.BarrierStatementContext,0)


        def boxStatement(self):
            return self.getTypedRuleContext(qasm3Parser.BoxStatementContext,0)


        def breakStatement(self):
            return self.getTypedRuleContext(qasm3Parser.BreakStatementContext,0)


        def calStatement(self):
            return self.getTypedRuleContext(qasm3Parser.CalStatementContext,0)


        def calibrationGrammarStatement(self):
            return self.getTypedRuleContext(qasm3Parser.CalibrationGrammarStatementContext,0)


        def classicalDeclarationStatement(self):
            return self.getTypedRuleContext(qasm3Parser.ClassicalDeclarationStatementContext,0)


        def constDeclarationStatement(self):
            return self.getTypedRuleContext(qasm3Parser.ConstDeclarationStatementContext,0)


        def continueStatement(self):
            return self.getTypedRuleContext(qasm3Parser.ContinueStatementContext,0)


        def defStatement(self):
            return self.getTypedRuleContext(qasm3Parser.DefStatementContext,0)


        def defcalStatement(self):
            return self.getTypedRuleContext(qasm3Parser.DefcalStatementContext,0)


        def delayStatement(self):
            return self.getTypedRuleContext(qasm3Parser.DelayStatementContext,0)


        def endStatement(self):
            return self.getTypedRuleContext(qasm3Parser.EndStatementContext,0)


        def expressionStatement(self):
            return self.getTypedRuleContext(qasm3Parser.ExpressionStatementContext,0)


        def externStatement(self):
            return self.getTypedRuleContext(qasm3Parser.ExternStatementContext,0)


        def forStatement(self):
            return self.getTypedRuleContext(qasm3Parser.ForStatementContext,0)


        def gateCallStatement(self):
            return self.getTypedRuleContext(qasm3Parser.GateCallStatementContext,0)


        def gateStatement(self):
            return self.getTypedRuleContext(qasm3Parser.GateStatementContext,0)


        def ifStatement(self):
            return self.getTypedRuleContext(qasm3Parser.IfStatementContext,0)


        def includeStatement(self):
            return self.getTypedRuleContext(qasm3Parser.IncludeStatementContext,0)


        def ioDeclarationStatement(self):
            return self.getTypedRuleContext(qasm3Parser.IoDeclarationStatementContext,0)


        def measureArrowAssignmentStatement(self):
            return self.getTypedRuleContext(qasm3Parser.MeasureArrowAssignmentStatementContext,0)


        def oldStyleDeclarationStatement(self):
            return self.getTypedRuleContext(qasm3Parser.OldStyleDeclarationStatementContext,0)


        def quantumDeclarationStatement(self):
            return self.getTypedRuleContext(qasm3Parser.QuantumDeclarationStatementContext,0)


        def resetStatement(self):
            return self.getTypedRuleContext(qasm3Parser.ResetStatementContext,0)


        def returnStatement(self):
            return self.getTypedRuleContext(qasm3Parser.ReturnStatementContext,0)


        def whileStatement(self):
            return self.getTypedRuleContext(qasm3Parser.WhileStatementContext,0)


        def annotation(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(qasm3Parser.AnnotationContext)
            else:
                return self.getTypedRuleContext(qasm3Parser.AnnotationContext,i)


        def getRuleIndex(self):
            return qasm3Parser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = qasm3Parser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_statement)
        self._la = 0 # Token type
        try:
            self.state = 180
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [20]:
                self.enterOuterAlt(localctx, 1)
                self.state = 143
                self.pragma()
                pass
            elif token in [2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 15, 16, 17, 18, 21, 22, 23, 24, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 39, 40, 41, 42, 43, 44, 45, 47, 48, 49, 50, 51, 52, 57, 67, 78, 79, 85, 86, 87, 88, 89, 90, 91, 92, 93, 94]:
                self.enterOuterAlt(localctx, 2)
                self.state = 147
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==21:
                    self.state = 144
                    self.annotation()
                    self.state = 149
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 178
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
                if la_ == 1:
                    self.state = 150
                    self.aliasDeclarationStatement()
                    pass

                elif la_ == 2:
                    self.state = 151
                    self.assignmentStatement()
                    pass

                elif la_ == 3:
                    self.state = 152
                    self.barrierStatement()
                    pass

                elif la_ == 4:
                    self.state = 153
                    self.boxStatement()
                    pass

                elif la_ == 5:
                    self.state = 154
                    self.breakStatement()
                    pass

                elif la_ == 6:
                    self.state = 155
                    self.calStatement()
                    pass

                elif la_ == 7:
                    self.state = 156
                    self.calibrationGrammarStatement()
                    pass

                elif la_ == 8:
                    self.state = 157
                    self.classicalDeclarationStatement()
                    pass

                elif la_ == 9:
                    self.state = 158
                    self.constDeclarationStatement()
                    pass

                elif la_ == 10:
                    self.state = 159
                    self.continueStatement()
                    pass

                elif la_ == 11:
                    self.state = 160
                    self.defStatement()
                    pass

                elif la_ == 12:
                    self.state = 161
                    self.defcalStatement()
                    pass

                elif la_ == 13:
                    self.state = 162
                    self.delayStatement()
                    pass

                elif la_ == 14:
                    self.state = 163
                    self.endStatement()
                    pass

                elif la_ == 15:
                    self.state = 164
                    self.expressionStatement()
                    pass

                elif la_ == 16:
                    self.state = 165
                    self.externStatement()
                    pass

                elif la_ == 17:
                    self.state = 166
                    self.forStatement()
                    pass

                elif la_ == 18:
                    self.state = 167
                    self.gateCallStatement()
                    pass

                elif la_ == 19:
                    self.state = 168
                    self.gateStatement()
                    pass

                elif la_ == 20:
                    self.state = 169
                    self.ifStatement()
                    pass

                elif la_ == 21:
                    self.state = 170
                    self.includeStatement()
                    pass

                elif la_ == 22:
                    self.state = 171
                    self.ioDeclarationStatement()
                    pass

                elif la_ == 23:
                    self.state = 172
                    self.measureArrowAssignmentStatement()
                    pass

                elif la_ == 24:
                    self.state = 173
                    self.oldStyleDeclarationStatement()
                    pass

                elif la_ == 25:
                    self.state = 174
                    self.quantumDeclarationStatement()
                    pass

                elif la_ == 26:
                    self.state = 175
                    self.resetStatement()
                    pass

                elif la_ == 27:
                    self.state = 176
                    self.returnStatement()
                    pass

                elif la_ == 28:
                    self.state = 177
                    self.whileStatement()
                    pass


                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AnnotationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def AnnotationKeyword(self):
            return self.getToken(qasm3Parser.AnnotationKeyword, 0)

        def RemainingLineContent(self):
            return self.getToken(qasm3Parser.RemainingLineContent, 0)

        def getRuleIndex(self):
            return qasm3Parser.RULE_annotation

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAnnotation" ):
                listener.enterAnnotation(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAnnotation" ):
                listener.exitAnnotation(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAnnotation" ):
                return visitor.visitAnnotation(self)
            else:
                return visitor.visitChildren(self)




    def annotation(self):

        localctx = qasm3Parser.AnnotationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_annotation)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 182
            self.match(qasm3Parser.AnnotationKeyword)
            self.state = 184
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==105:
                self.state = 183
                self.match(qasm3Parser.RemainingLineContent)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ScopeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBRACE(self):
            return self.getToken(qasm3Parser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(qasm3Parser.RBRACE, 0)

        def statementOrScope(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(qasm3Parser.StatementOrScopeContext)
            else:
                return self.getTypedRuleContext(qasm3Parser.StatementOrScopeContext,i)


        def getRuleIndex(self):
            return qasm3Parser.RULE_scope

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterScope" ):
                listener.enterScope(self)
